env parameters changed

--- a/.env
+++ b/.env
@@ -6,8 +6,15 @@ LOGS_PATH=src/var/log
 
 ###> Database
 
-DB_HOST=0.0.0.0
+DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=elizabeth_postgres
-DB_USER=elizabeth
+DB_NAME=postgres
+DB_USER=dbuser
 DB_PASSWORD=password
+
+###> MiniIO
+MINIO_ACCESS_KEY=miniologin
+MINIO_SECRET_KEY=miniopass
+MINIO_HOST=0.0.0.0
+MINIO_PORT=9000
+MINIO_BUCKET_NAME=miniofolder
