--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@types/minio": "^7.0.2",
     "@types/multer": "^1.3.9",
     "@types/node": "^10.12.18",
+    "bcrypt": "^4.0.1",
     "cache-manager": "^2.9.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
+    "express-jwt": "^5.3.3",
     "json-stringify-safe": "^5.0.1",
+    "jwks-rsa": "^1.8.0",
     "minio": "^7.0.12",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
@@ -46,5 +49,8 @@
     "wait-on": "^3.2.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.2.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^3.0.0"
   }
 }
